城市页面完成

--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -1,6 +1,34 @@
 body {
   font-size: 14px;
-  color: #484848;
-  font-family: "Circular", "PingFang-SC", "Hiragino Sans GB", "微软雅黑", "Microsoft YaHei", "Heiti SC";
-  line-height: 1.15;
+}
+.top-page {
+  position: relative;
+  z-index: 9;
+  height: 100vh;
+  background-color: #fff;
+  overflow-y: auto;
+}
+
+.bottom-gray-line {
+  border-bottom: 1px solid var(--line-color);
+}
+
+.icon_check {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  background: url("../img/detail/icon_check.png") 0 0 / 100% 100%;
+}
+.detail_icon_chat {
+  display: inline-block;
+  width: 17px;
+  height: 17px;
+  background: url("../img/detail/icon_chat.png") 0 0 / 100% 100%;
+}
+
+.detail_icon_order {
+  display: block;
+  width: 14px;
+  height: 17px;
+  background: url("../img/detail/icon_order.png") 0 0 / 100% 100%;
 }
